# pulseaudio-webrtc-audio-processing

./: .gitignore  Makefile.am  NEWS  README  README.md  UPDATING.md  autogen.sh  configure.ac  webrtc-audio-processing.pc.in
src/common_audio/vad/: Makefile.am
src/modules/audio_processing/: Makefile.am
src/modules/audio_processing/aec/: Makefile.am
src/modules/audio_processing/aecm/: Makefile.am
src/modules/audio_processing/agc/: Makefile.am
src/modules/audio_processing/ns/: Makefile.am
src/modules/audio_processing/utility/: Makefile.am
test/: CMakeLists.txt  initializeTest.cpp  readme.md
webrtc/: Makefile.am
webrtc/base/: Makefile.am
webrtc/common_audio/: Makefile.am
webrtc/common_audio/resampler/: sinc_resampler.h
webrtc/modules/: Makefile.am
webrtc/modules/audio_coding/: Makefile.am
webrtc/modules/audio_coding/codecs/isac/main/source/: entropy_coding.c
webrtc/modules/audio_processing/: Makefile.am
webrtc/modules/interface/: module_common_types.h
webrtc/system_wrappers/: Makefile.am
